--- a/index.html
+++ b/index.html
@@ -66,40 +66,40 @@
   <!-- inject js start -->
 
   <!--== jquery -->
-  <script src="./src/assets/js/jquery.min.js"></script>
+  <script type="module" src="./src/assets/js/jquery.min.js"></script>
 
   <!--== bootstrap -->
-  <script src="./src/assets/js/bootstrap.bundle.min.js"></script>
+  <script  type="module" src="./src/assets/js/bootstrap.bundle.min.js"></script>
 
   <!--== modernizr -->
-  <script src="./src/assets/js/modernizr.min.js"></script>
+  <script   type="module" src="./src/assets/js/modernizr.min.js"></script>
 
   <!--== jquery-appear -->
-  <script src="./src/assets/js/jquery-appear.js"></script>
+  <script  type="module" src="./src/assets/js/jquery-appear.js"></script>
 
   <!--== lottie-player -->
-  <script src="./src/assets/js/lottie-player.js"></script>
+  <script  type="module" src="./src/assets/js/lottie-player.js"></script>
 
   <!--== owl-carousel -->
-  <script src="./src/assets/js/owl.carousel.min.js"></script>
+  <script  type="module" src="./src/assets/js/owl.carousel.min.js"></script>
 
   <!--== isotope.pkgd.min -->
-  <script src="./src/assets/js/isotope.pkgd.min.js"></script>
+  <script  type="module" src="./src/assets/js/isotope.pkgd.min.js"></script>
 
   <!--== magnific-popup -->
-  <script src="./src/assets/js/jquery.magnific-popup.min.js"></script>
+  <script  type="module" src="./src/assets/js/jquery.magnific-popup.min.js"></script>
 
   <!--== countdown -->
-  <script src="./src/assets/js/odometer.min.js"></script>
+  <script  type="module" src="./src/assets/js/odometer.min.js"></script>
 
   <!--== countdown -->
-  <script src="./src/assets/js/jquery.countdown.min.js"></script>
+  <script  type="module" src="./src/assets/js/jquery.countdown.min.js"></script>
 
   <!--== typer -->
-  <script src="./src/assets/js/typer.js"></script>
+  <script  type="module" src="./src/assets/js/typer.js"></script>
 
   <!--== theme-script -->
-  <script src="./src/assets/js/theme-script.js"></script>
+  <script  type="module" src="./src/assets/js/theme-script.js"></script>
 
   <!-- inject js end -->
 </body>
