--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link href="./src/assets/css/magnific-popup.css" rel="stylesheet" type="text/css" />
 
   <!--== owl.carousel -->
-  <link href="./src/assets/css/owl.carousel.css" rel="stylesheet" type="text/css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
   <!--== odometer -->
   <link href="./src/assets/css/odometer.css" rel="stylesheet" type="text/css" />
@@ -66,7 +66,7 @@
   <!-- inject js start -->
 
   <!--== jquery -->
-  <script type="module" src="./src/assets/js/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!--== bootstrap -->
   <script  type="module" src="./src/assets/js/bootstrap.bundle.min.js"></script>
@@ -81,7 +81,7 @@
   <script  type="module" src="./src/assets/js/lottie-player.js"></script>
 
   <!--== owl-carousel -->
-  <script  type="module" src="./src/assets/js/owl.carousel.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
   <!--== isotope.pkgd.min -->
   <script  type="module" src="./src/assets/js/isotope.pkgd.min.js"></script>
