--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   <!--== theme.min -->
   <link href="./src/assets/css/theme.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
   <!-- inject css end -->
 </head>
